edit pengaturan akun

--- a/rbpl/resources/views/view-pengaturan-akun_disable.html
+++ b/rbpl/resources/views/view-pengaturan-akun_disable.html
@@ -46,10 +46,8 @@
               </div>
             </div>
             <div class="cta d-grid">
-              <button class="button-wo-icon" type="button">Sign Up</button>
+              <button class="button-wo-icon" type="button">Sign Out</button>
               <div class="info-text d-flex justify-content-center">
-                <p class="info-text-1 text-center">Sudah punya akun?</p>
-                <p class="info-text-2 text-center" type="button">Masuk di sini</p>
               </div>
             </div>
           </div>
