menambah button edit pada pengaturan akun

--- a/rbpl/resources/views/view-pengaturan-akun_disable.html
+++ b/rbpl/resources/views/view-pengaturan-akun_disable.html
@@ -19,36 +19,56 @@
           <span class="material-symbols-outlined" type="button">arrow_back_ios</span>
           <p class="button-text" type="button">Kembali</p>
         </div>
+        <form>
         <div class="container-2 d-grid">
           <div class="title text-center d-flex flex-column">
             <h2 class="main-title">Pengaturan akun</h2>
             <p class="sub-title">Mau apa kamu hari ini?</p>
           </div>
+
+          
           <div class="form-cta-control d-grid">
             <div class="container-3">
               <div class="form-sign-up">
                 <div class="form-1 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nama</label>
                   <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
+
+
+
                 <div class="form-2 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Email</label>
                   <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
+
+
                 <div class="form-3 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nomor Whatsapp</label>
                   <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
+
+
                 <div class="form-4 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Kata Sandi</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
+
+
               </div>
             </div>
             <div class="cta d-grid">
               <button class="button-wo-icon" type="button">Sign Out</button>
               <div class="info-text d-flex justify-content-center">
               </div>
+            </form>
+
+
+
             </div>
           </div>
         </div>
@@ -58,6 +78,62 @@
 </html>
 
 <style>
+  /* ini adalah css nama */
+  .form-1 {
+  position: relative;
+}
+
+.edit-link {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.form-2 {
+  position: relative;
+}
+
+.edit-link2 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.form-3 {
+  position: relative;
+}
+
+.edit-link3 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.form-4 {
+  position: relative;
+}
+
+.edit-link4 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: blue;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+
+
+
   .sign-up-user {
     font-family: "Poppins", sans-serif;
   }
