menambah fungsi disable pada pengaturan akun

--- a/rbpl/resources/views/view-pengaturan-akun_disable.html
+++ b/rbpl/resources/views/view-pengaturan-akun_disable.html
@@ -32,7 +32,7 @@
               <div class="form-sign-up">
                 <div class="form-1 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nama</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
                   <span class="edit-link">Edit</span>
                 </div>
 
@@ -40,21 +40,21 @@
 
                 <div class="form-2 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
                   <span class="edit-link">Edit</span>
                 </div>
 
 
                 <div class="form-3 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nomor Whatsapp</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
                   <span class="edit-link">Edit</span>
                 </div>
 
 
                 <div class="form-4 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Kata Sandi</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" />
+                  <input type="password" class="form-control" id="exampleInputPassword1" disabled />
                   <span class="edit-link">Edit</span>
                 </div>
 
