--- a/rbpl/resources/views/view-pengaturan-akun-enable.html
+++ b/rbpl/resources/views/view-pengaturan-akun-enable.html
@@ -32,30 +32,30 @@
               <div class="form-sign-up">
                 <div class="form-1 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nama</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
-                  <a href="view-pengaturan-akun-enable.html" class="edit-link">Edit</a>
+                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <a href="" class="edit-link">Edit</a>
                 </div>
 
 
 
                 <div class="form-2 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
-                  <a href="view-pengaturan-akun-enable.html" class="edit-link">Edit</a>
+                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
 
 
                 <div class="form-3 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Nomor Whatsapp</label>
-                  <input type="text" class="form-control" id="exampleInputPassword1" disabled />
-                  <a href="view-pengaturan-akun-enable.html" class="edit-link">Edit</a>
+                  <input type="text" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
 
 
                 <div class="form-4 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Kata Sandi</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" disabled />
-                  <a href="view-pengaturan-akun-enable.html" class="edit-link">Edit</a>
+                  <input type="password" class="form-control" id="exampleInputPassword1" />
+                  <span class="edit-link">Edit</span>
                 </div>
 
 
