--- a/rbpl/resources/views/view-pengaturan-akun_disable.html
+++ b/rbpl/resources/views/view-pengaturan-akun_disable.html
@@ -114,7 +114,7 @@
   bottom: 10px;
   right: 10px;
   color: blue;
-  text-decoration: underline;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -127,7 +127,7 @@
   top: 0;
   right: 0;
   color: blue;
-  text-decoration: underline;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -140,7 +140,7 @@
   top: 0;
   right: 0;
   color: blue;
-  text-decoration: underline;
+  text-decoration: none;
   cursor: pointer;
 }
 
@@ -153,7 +153,7 @@
   top: 0;
   right: 0;
   color: blue;
-  text-decoration: underline;
+  text-decoration: none;
   cursor: pointer;
 }
 
